26/04/23
- Fixed: --replace for get_predictions.py wasn't working properly because of mode="a" 

Known issues: 
- Fields that failed to crossmatch has to do with the lack of coverage with GALEX. We can change the order of crossmatch ( first unWISE then GALEX and set all GALEX filters as NaN) or we accept that these fields will not go into the VAC. 

 
24/04/23
RF models were updated!
- Bug fixed: cross-validation after application of extinction correction were being done in a different sample size than original. After fixing it by correcting extinction after the preprocess step, grid search values were changed (max depth is now 20)
- We uploaded the new .sav files into the RF folder
- Next steps are: re-run RF and merge catalogs again

Known issues up to this date:
- 6 fields fields failed to crossmatch; 12 failed to preprocess

17/02/23
Flow should be:

1) get_crossmatch.py
2) preprocess.py
3) get_predictions.py
4) merge_catalogs.py


16/02/23
These models should have been trained with extinction-corrected data.
We saw that we were not correcting WISE and GALEX (GALEX being the worst case...)

- BMDN: yes
- RF: yes
- FLEX: yes