@@ -1,3 +1,6 @@
+14/01/23
+- Fixed: order of lambdas in correct_extiction.py
+
 26/04/23
 - Fixed: --replace for get_predictions.py wasn't working properly because of mode="a" 
 
